[gd_scene load_steps=24 format=3 uid="uid://bn6laar0b1t3p"]

[ext_resource type="Script" path="res://Scripts/GUI/GUI.gd" id="1_8c0rb"]
[ext_resource type="Script" path="res://Scripts/GUI/GUIButton.gd" id="2_6l245"]
[ext_resource type="BoxMesh" uid="uid://cksfchaox0peo" path="res://Materials/ButtonHighlightMesh.tres" id="3_hdne4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a0xyp"]

[sub_resource type="BoxMesh" id="BoxMesh_1qhou"]
material = SubResource("StandardMaterial3D_a0xyp")
size = Vector3(3, 0.2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_j8l1e"]
size = Vector3(3, 0.2, 0.1)

[sub_resource type="ViewportTexture" id="ViewportTexture_2c0ap"]
viewport_path = NodePath("GUIGrabBar/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_urpr7"]
resource_local_to_scene = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_2c0ap")

[sub_resource type="QuadMesh" id="QuadMesh_05dqo"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_urpr7")
size = Vector2(3, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61q68"]
bg_color = Color(0.00638623, 0.256551, 0.42385, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbwi"]
bg_color = Color(1.54018e-06, 0.703717, 0.993119, 1)

[sub_resource type="Theme" id="Theme_fwy1e"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/line_spacing = 0
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/constants/shadow_outline_size = 0
Label/font_sizes/font_size = 16
Label/styles/normal = SubResource("StyleBoxFlat_61q68")
Panel/styles/panel = SubResource("StyleBoxFlat_glbwi")

[sub_resource type="LabelSettings" id="LabelSettings_cibjf"]
font_size = 12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_27puj"]
albedo_color = Color(0, 0.968393, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_rkevo"]
material = SubResource("StandardMaterial3D_27puj")
size = Vector3(0.5, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_54rnr"]
size = Vector3(0.5, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oky0a"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8uc8p"]
material = SubResource("StandardMaterial3D_oky0a")
size = Vector3(0.5, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_pddgw"]
size = Vector3(0.5, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_73whw"]
albedo_color = Color(0.435192, 0.435192, 0.435192, 1)

[sub_resource type="BoxMesh" id="BoxMesh_eiwnp"]
material = SubResource("StandardMaterial3D_73whw")
size = Vector3(0.5, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7qfmd"]

[sub_resource type="QuadMesh" id="QuadMesh_61o1p"]
material = SubResource("StandardMaterial3D_7qfmd")
flip_faces = true
size = Vector2(3, 2)

[node name="Gui" type="Node3D"]
script = ExtResource("1_8c0rb")

[node name="GUIGrabBar" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_1qhou")

[node name="Area3D" type="Area3D" parent="GUIGrabBar"]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GUIGrabBar/Area3D"]
shape = SubResource("BoxShape3D_j8l1e")

[node name="DisplayMesh" type="MeshInstance3D" parent="GUIGrabBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("QuadMesh_05dqo")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="GUIGrabBar"]
debug_draw = 1
size = Vector2i(560, 320)

[node name="Control" type="Control" parent="GUIGrabBar/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="GUIGrabBar/SubViewport/Control"]
custom_minimum_size = Vector2(560, 320)
layout_mode = 0
offset_right = 560.0
offset_bottom = 320.0
theme = SubResource("Theme_fwy1e")

[node name="InstructionLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
top_level = true
custom_minimum_size = Vector2(560, 320)
layout_mode = 0
offset_right = 560.0
offset_bottom = 320.0
text = "
Web of Life
Controls:
A/X button: Switches selection mode
Grip button: Used to grab an object
Trigger button: Used to activate the jetpack (point where you want to go)

GUI Buttons: Select by hovering over them with the flashlight or bubble cursor for 2 seconds
Green Button: Start and Stop simulation
Red Button: Reset simulation
Grey Button: Open and close the instruction popup
"
label_settings = SubResource("LabelSettings_cibjf")
horizontal_alignment = 1

[node name="CoyoteLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 10.0
offset_top = 50.0
offset_right = 64.0
offset_bottom = 96.0
text = "Coyote
0"
horizontal_alignment = 1

[node name="FoxLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 110.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0
text = "Fox
0"
horizontal_alignment = 1

[node name="DeerLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 10.0
offset_top = 110.0
offset_right = 90.0
offset_bottom = 160.0
text = "Deer
0"
horizontal_alignment = 1

[node name="DuckLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 110.0
offset_top = 110.0
offset_right = 190.0
offset_bottom = 160.0
text = "Duck
0"
horizontal_alignment = 1

[node name="SquirrelLabel" type="Label" parent="GUIGrabBar/SubViewport/Control/Panel"]
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 210.0
offset_top = 110.0
offset_right = 290.0
offset_bottom = 160.0
text = "Squirrel
0"
horizontal_alignment = 1

[node name="Button1" type="MeshInstance3D" parent="GUIGrabBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.3, 0.06)
mesh = SubResource("BoxMesh_rkevo")
skeleton = NodePath("../..")
script = ExtResource("2_6l245")

[node name="Area3D" type="Area3D" parent="GUIGrabBar/Button1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GUIGrabBar/Button1/Area3D"]
shape = SubResource("BoxShape3D_54rnr")

[node name="ButtonHighlight" type="MeshInstance3D" parent="GUIGrabBar/Button1"]
visible = false
mesh = ExtResource("3_hdne4")

[node name="Button2" type="MeshInstance3D" parent="GUIGrabBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.3, 0.06)
mesh = SubResource("BoxMesh_8uc8p")
skeleton = NodePath("../..")
script = ExtResource("2_6l245")

[node name="Area3D" type="Area3D" parent="GUIGrabBar/Button2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GUIGrabBar/Button2/Area3D"]
shape = SubResource("BoxShape3D_pddgw")

[node name="ButtonHighlight" type="MeshInstance3D" parent="GUIGrabBar/Button2"]
visible = false
mesh = ExtResource("3_hdne4")

[node name="Button3" type="MeshInstance3D" parent="GUIGrabBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.06)
mesh = SubResource("BoxMesh_eiwnp")
skeleton = NodePath("../..")
script = ExtResource("2_6l245")

[node name="Area3D" type="Area3D" parent="GUIGrabBar/Button3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GUIGrabBar/Button3/Area3D"]
shape = SubResource("BoxShape3D_pddgw")

[node name="ButtonHighlight" type="MeshInstance3D" parent="GUIGrabBar/Button3"]
visible = false
mesh = ExtResource("3_hdne4")

[node name="GUIBack" type="MeshInstance3D" parent="GUIGrabBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("QuadMesh_61o1p")
skeleton = NodePath("../..")

[connection signal="area_entered" from="GUIGrabBar/Button1/Area3D" to="GUIGrabBar/Button1" method="_on_area_entered"]
[connection signal="area_exited" from="GUIGrabBar/Button1/Area3D" to="GUIGrabBar/Button1" method="_on_area_exited"]
[connection signal="area_entered" from="GUIGrabBar/Button2/Area3D" to="GUIGrabBar/Button2" method="_on_area_entered"]
[connection signal="area_exited" from="GUIGrabBar/Button2/Area3D" to="GUIGrabBar/Button2" method="_on_area_exited"]
[connection signal="area_entered" from="GUIGrabBar/Button3/Area3D" to="GUIGrabBar/Button3" method="_on_area_entered"]
[connection signal="area_exited" from="GUIGrabBar/Button3/Area3D" to="GUIGrabBar/Button3" method="_on_area_exited"]
